[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freesound-downloader"
version = "1.0.0"
description = "Interactive Freesound.org downloader with browser-based authentication"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "nordost8"}
]
keywords = [
    "freesound",
    "downloader",
    "audio",
    "sound-effects",
    "nodriver",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nodriver>=0.48.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.scripts]
freesound-downloader = "freesound_downloader:main"

[project.urls]
Homepage = "https://github.com/nordost8/freesoundorg-downloader-python"
Repository = "https://github.com/nordost8/freesoundorg-downloader-python"
Issues = "https://github.com/nordost8/freesoundorg-downloader-python/issues"
